--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "som_projects" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
@@ -33,6 +33,8 @@ github_username:  jekyll
 theme: minima
 plugins:
   - jekyll-feed
+
+
 
 defaults:
   -
@@ -44,15 +46,6 @@ defaults:
       layout: "post"
       title: "My Title"
       author: "Tanya"
-
-defaults:
-  -
-    scope:
-      path: "assets/img"
-    values:
-      #values
-      image: true
-      
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
