--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,12 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "som_projects" # the base hostname & protocol for your site, e.g. http://example.com
+#baseurl: "" # the subpath of your site, e.g. /blog
+#url: "" # the base hostname & protocol for your site, e.g. http://example.com
+
+url: tanya-somova.github.io
+baseurl: /som_projects
+
 twitter_username: jekyllrb
 github_username:  jekyll
 
@@ -33,7 +37,6 @@ github_username:  jekyll
 theme: minima
 plugins:
   - jekyll-feed
-
 
 
 defaults:
