--- a/_config.yml
+++ b/_config.yml
@@ -24,17 +24,14 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-<<<<<<< HEAD
-#baseurl: "" # the subpath of your site, e.g. /blog
-#url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
-url: tanya-somova.github.io
-baseurl: /som_projects
+#url: tanya-somova.github.io
+#baseurl: /som_projects
 
 =======
-baseurl: "som_projects" # the subpath of your site, e.g. /blog
+baseurl: /som_projects # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
->>>>>>> 7fc992e255543a3a08992d1f4c8e6c10d8ec359f
+
 twitter_username: jekyllrb
 github_username:  jekyll
 
